# Ultraliser

./: .gitignore  AUTHORS.md  CMakeLists.txt
apps/: CMakeLists.txt
apps/common/: AppArguments.cpp  AppArguments.h  AppCommon.cpp  AppCommon.h  AppOptions.cpp  AppOptions.h
apps/ultraMeshMapper/: MeshMapper.cpp
apps/ultraOptimizeMeshAspectRatio/: CMakeLists.txt  OptimizeMeshAspectRatio.cpp
apps/ultraOptimizeMultiRegionMesh/: CMakeLists.txt  OptimizeMultiRegionMesh.cpp
apps/ultraRasterize/: CMakeLists.txt  Rasterize.cpp  shapes_output.ppm
apps/ultraSkeletonizeNeuron/: CMakeLists.txt  NeuronOperations.cpp  OtherOperations.cpp  SkeletonizeNeuron.cpp  SkeletonizeNeuron.h  SkeletonizeNeuronMesh.cpp  SomaOperations.cpp  SpineOperations.cpp
apps/ultraSkeletonizeVasculature/: SkeletonizeVasculatureVolume.cpp
cmake/: OpenMP.cmake
python/: CMakeLists.txt  README.md  pyproject.toml  ultraliser_python.cpp
python/src/ultraliser/: __init__.py
python/tests/: test_volume_to_mesh.py
scripts/: nrrd2raw.py
scripts/spines-handling/: aggregate-spines.py  extract-spines.py
ultraliser/: CMakeLists.txt
ultraliser/algorithms/: DualMarchingCubes.cpp  DualMarchingCubes.h  MarchingCubes.cpp  MarchingCubes.h
ultraliser/algorithms/floodfill/: FloodFiller.cpp  FloodFiller.h
ultraliser/algorithms/mcs/: DualMarchingCubes.cpp  MarchingCubes.cpp  MarchingCubes.h
ultraliser/algorithms/skeletonization/: NeuronSkeletonizer.cpp  NeuronSkeletonizer.h  SkeletonBranch.cpp  SkeletonBranch.h  Skeletonizer.cpp  Skeletonizer.h  SomaSegmenter.cpp  SomaSegmenter.h  SpineSkeletonizer.cpp  SpineSkeletonizer.h  VasculatureSkeletonizer.cpp  VasculatureSkeletonizer.h
ultraliser/common/: Defines.h  Enums.h  Logging.h  OpenMP.hh  Progress.cpp  Progress.h
ultraliser/data/images/: Image.cpp  Image.h  ImagePixel.h  Pixel2.h
ultraliser/data/meshes/advanced/: AdvancedMesh.cpp  AdvancedMesh.h
ultraliser/data/meshes/simple/: Mesh.cpp  Mesh.h  MeshOperations.cpp  MeshOperations.h  MeshOptimization.cpp
ultraliser/data/morphologies/: SpineMorphology.cpp  SpineMorphology.h
ultraliser/data/volumes/: Volume.cpp  Volume.h
ultraliser/data/volumes/grids/: BitVolumeGrid.cpp  BitVolumeGrid.h  FloatVolumeGrid.cpp  FloatVolumeGrid.h  UnsignedVolumeGrid.cpp  UnsignedVolumeGrid.h  VolumeGrid.cpp  VolumeGrid.h
ultraliser/data/volumes/utilities/: VolumeReader.cpp
ultraliser/data/volumes/voxels/: Voxel3.h
ultraliser/geometry/: Circle.cpp  Circle.h  Intersection.cpp
ultraliser/math/: Matrix4f.cpp  Matrix4f.h  Quat4f.cpp  Quat4f.h  Vector3f.cpp  Vector3f.h
